trunk/Archive/729b47d4171d3cb73540e779f3935c03-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp:5:8: error: ‘StringBase’ does not name a type
 static StringBase Format ( const StringBase& format, const Args&... args ) {
        ^
main.cpp:59:11: error: ‘ulword’ has not been declared
 template <ulword n, typename T, typename ... Args>
           ^
main.cpp:60:22: error: variable or field ‘Format’ declared void
 static void Format ( StringBase& value, ulword index, const T& arg0, const Args&... args ) {
                      ^
main.cpp:60:22: error: ‘StringBase’ was not declared in this scope
main.cpp:60:34: error: ‘value’ was not declared in this scope
 static void Format ( StringBase& value, ulword index, const T& arg0, const Args&... args ) {
                                  ^
main.cpp:60:41: error: ‘ulword’ was not declared in this scope
 static void Format ( StringBase& value, ulword index, const T& arg0, const Args&... args ) {
                                         ^
main.cpp:60:55: error: expected primary-expression before ‘const’
 static void Format ( StringBase& value, ulword index, const T& arg0, const Args&... args ) {
                                                       ^
main.cpp:60:70: error: expected primary-expression before ‘const’
 static void Format ( StringBase& value, ulword index, const T& arg0, const Args&... args ) {
                                                                      ^
main.cpp:69:11: error: ‘ulword’ has not been declared
 template <ulword n, typename ... Args>
           ^
main.cpp:70:22: error: variable or field ‘Format’ declared void
 static void Format ( StringBase& value, ulword index ) {
                      ^
main.cpp:70:22: error: ‘StringBase’ was not declared in this scope
main.cpp:70:34: error: ‘value’ was not declared in this scope
 static void Format ( StringBase& value, ulword index ) {
                                  ^
main.cpp:70:41: error: ‘ulword’ was not declared in this scope
 static void Format ( StringBase& value, ulword index ) {
                                         ^
main.cpp:75:30: error: variable or field ‘FormatSelected’ declared void
 static void FormatSelected ( StringBase& value, const T& arg0 ) {
                              ^
main.cpp:75:30: error: ‘StringBase’ was not declared in this scope
main.cpp:75:42: error: ‘value’ was not declared in this scope
 static void FormatSelected ( StringBase& value, const T& arg0 ) {
                                          ^
main.cpp:75:49: error: expected primary-expression before ‘const’
 static void FormatSelected ( StringBase& value, const T& arg0 ) {
                                                 ^
main.cpp:79:30: error: variable or field ‘FormatSelected’ declared void
 static void FormatSelected ( StringBase& value, const StringBase& arg0 ) {
                              ^
main.cpp:79:30: error: ‘StringBase’ was not declared in this scope
main.cpp:79:42: error: ‘value’ was not declared in this scope
 static void FormatSelected ( StringBase& value, const StringBase& arg0 ) {
                                          ^
main.cpp:79:49: error: expected primary-expression before ‘const’
 static void FormatSelected ( StringBase& value, const StringBase& arg0 ) {
                                                 ^
